--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -253,10 +253,10 @@ showstringspaces=false            %
 % ---------------------------------------------------------------------------- %
 % Set some things we need for SAND reports. These are mandatory
 %
-\SANDnum{INL/EXT-XX-XXXXX}
+\SANDnum{INL/EXT-20-57857}
 \SANDprintDate{\today}
 \SANDauthor{Congjian Wang and Diego Mandelli}
-\SANDreleaseType{Revision 0}
+\SANDreleaseType{Revision 1}
 \def\component#1{\texttt{#1}}
 
 % ---------------------------------------------------------------------------- %
