update document ID numbers

--- a/doc/sqa/sdd/dataInterfaceSystemControl.tex
+++ b/doc/sqa/sdd/dataInterfaceSystemControl.tex
@@ -15,4 +15,4 @@ The software is accessible via GITLAB to licensed users. The distribution is res
 The software is available at the following url: \url{git@hpcgitlab.hpc.inl.gov:RAVEN_PLUGINS/SR2ML.git}.
 
  \section{REQUIREMENTS CROSS-REFERENCE}
-The requirements are detailed in SPC-xxxx, ``SR2ML Software Requirements Specification (SRS) and Traceability Matrix''.
+The requirements are detailed in SPC-2980, ``SR2ML Software Requirements Specification (SRS) and Traceability Matrix''.
