--- a/doc/sqa/sdd/sr2ml_software_design_description.tex
+++ b/doc/sqa/sdd/sr2ml_software_design_description.tex
@@ -246,7 +246,7 @@ showstringspaces=false            %
 % ---------------------------------------------------------------------------- %
 % Set some things we need for SAND reports. These are mandatory
 %
-\SANDnum{SDD-XXX}
+\SANDnum{SDD-560}
 \SANDprintDate{\today}
 \SANDauthor{Congjian Wang, Diego Mandelli, Andrea Alfonsi}
 \SANDreleaseType{Revision DRAFT}
