mv mcs solver from PRAplugin to SR2ML

--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -299,6 +299,7 @@ showstringspaces=false            %
     \input{include/DataClassifier.tex}
     \input{include/ETdataImporter.tex}
     \input{include/FTdataImporter.tex}
+    \input{include/MCSsolver.tex}
     \input{include/ReliabilityModels.tex}
     \input{include/MaintenanceModels.tex}
 
