--- a/doc/user_manual/include/MCSsolver.tex
+++ b/doc/user_manual/include/MCSsolver.tex
@@ -81,7 +81,7 @@ or 1 (Basic event set to True: probability=1.0).
 The format of the dataObject can be:
 \begin{itemize}
   \item HistorySet: it contains the temporal profile of each basic event (e.g., BE1, BE2, BE3, and BE4) as a time 
-                    series (see test\_MCSSolver_TD.xml). In this case it is needed to specify the ID of the time variable 
+                    series (see test\_MCSSolver\_TD.xml). In this case it is needed to specify the ID of the time variable 
                     contained in the HistorySet in the \xmlNode{timeID} node.
   
    \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=Time dependent (from HistorySet) MCSSolver model input example., label=lst:MCSSolver_InputExample]
