edit files for PR

--- a/doc/user_manual/include/MCSsolver.tex
+++ b/doc/user_manual/include/MCSsolver.tex
@@ -2,7 +2,7 @@
 \label{sec:MCSSolver}
 
 This model is designed to read from file a list of Minimal Cut Sets (MCSs) and to import such Boolean logic structure as a RAVEN model.
-Provided the sampled values of Basic Events (BEs) margin or probability value, the MCSSolver determines the margin or the probability 
+Provided the sampled Basic Events (BEs) margin or probability values, the MCSSolver determines the margin or the probability 
 of Top Event (TE).
 The list of MCS must be provided through a CSV file with the following format:
 
