--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -157,7 +157,15 @@ showstringspaces=false            %
                                                 % xmlDesc = XML description
 \newcommand{\default}[1]{~\\*\textit{Default: #1}}
 \newcommand{\nb} {\textcolor{deepgreen}{\textbf{~Note:}}~}
+\newcommand{\ppType}[2]
+{
+  In order to use the \textit{#1} PP, the user needs to set the
+  \xmlAttr{subType} of a \xmlNode{PostProcessor} node:
 
+  \xmlNode{PostProcessor \xmlAttr{name}=\xmlString{ppName} \xmlAttr{subType}=\xmlString{SR2ML.#2}/}.
+
+   Several sub-nodes are available:
+}
 
 %%%%%%%% End comands definition to input python code into document
 
@@ -292,16 +300,20 @@ showstringspaces=false            %
     % This is where the body of the report begins; usually with an Introduction
     %
     \input{Introduction.tex}
+    %%%%%%%%%%%%% External Models %%%%%%%%%%%%%%
     \input{include/ETmodel.tex}
     \input{include/FTmodel.tex}
     \input{include/MarkovModel.tex}
     \input{include/RBDmodel.tex}
-    \input{include/DataClassifier.tex}
-    \input{include/ETdataImporter.tex}
-    \input{include/FTdataImporter.tex}
     \input{include/MCSsolver.tex}
     \input{include/ReliabilityModels.tex}
     \input{include/MaintenanceModels.tex}
+    %%%%%%%%%%%%% PostProcessors %%%%%%%%%%%%%%%%
+    \input{include/DataClassifier.tex}
+    \input{include/ETdataImporter.tex}
+    \input{include/FTdataImporter.tex}
+    \input{include/MCSImporter.tex}
+    \input{include/DiscreteRiskMeasures.tex}
 
     \section*{Document Version Information}
     This document has been compiled using the following version of the plug-in git repository:
