--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -309,7 +309,7 @@ showstringspaces=false            %
     \input{include/ReliabilityModels.tex}
     \input{include/MaintenanceModels.tex}
     %%%%%%%%%%%%% PostProcessors %%%%%%%%%%%%%%%%
-    \input{include/DataClassifier.tex}
+    \input{include/DataLabeling.tex}
     \input{include/ETdataImporter.tex}
     \input{include/FTdataImporter.tex}
     \input{include/MCSImporter.tex}
