--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -314,6 +314,7 @@ showstringspaces=false            %
     \input{include/FTdataImporter.tex}
     \input{include/MCSImporter.tex}
     \input{include/DiscreteRiskMeasures.tex}
+    \input{include/MarginModels.tex}
 
     \section*{Document Version Information}
     This document has been compiled using the following version of the plug-in git repository:
