--- a/doc/user_manual/Introduction.tex
+++ b/doc/user_manual/Introduction.tex
@@ -85,9 +85,10 @@ The features included in this plugin are:
 	\item Fault Tree (FT) Model (see Section~\ref{sec:FTModel})
 	\item Markov Model (see Section~\ref{sec:MarkovModel})
 	\item Reliability Block Diagram (RBD) Model (see Section~\ref{sec:RBDmodel})
-	\item Data Classifier (see Section~\ref{sec:dataClassifier})
-	\item ET Data Importer (see Section~\ref{sec:ETdataImporter})
-	\item FT Data Importer (see Section~\ref{sec:FTdataImporter})
+	\item MCSSolver (see Section~\ref{sec:MCSSolver})
 	\item Reliability Models (see Section~\ref{sec:ReliabilityModels})
   \item Maintenance Models (see Section~\ref{sec:MaintenanceModels})
+	\item Data Labeling (see Section~\ref{sec:DataLabeling})
+	\item ET Data Importer (see Section~\ref{sec:ETdataImporter})
+	\item FT Data Importer (see Section~\ref{sec:FTdataImporter})
 \end{itemize}
