fix margin issue and reference issues

--- a/doc/user_manual/include/RBDmodel.tex
+++ b/doc/user_manual/include/RBDmodel.tex
@@ -35,12 +35,9 @@ As an example, the RBD of Figure~\ref{fig:RBD} is translated in the RAVEN format
   <node name="8">
     <childs>SG3</childs>
   </node>
-  <node name="SG1">
-  </node>
-  <node name="SG2">
-  </node>
-  <node name="SG3">
-  </node>
+  <node name="SG1"/>
+  <node name="SG2"/>
+  <node name="SG3"/>
 </Graph>
 \end{lstlisting}
 
