--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -282,6 +282,7 @@ showstringspaces=false            %
 % Start the document
 %
 \begin{document}
+    \sloppy
     \maketitle
 
     % ------------------------------------------------------------------------ %
