--- a/doc/user_manual/include/FTmodel.tex
+++ b/doc/user_manual/include/FTmodel.tex
@@ -55,8 +55,6 @@ As an example, the FT of Figure~\ref{fig:FT} is translated in the OpenPSA as sho
 </opsa-mef>
 \end{lstlisting}
 
-The FT of Figure~\ref{fig:FT} described in Listing~\ref{lst:FTModel} can be defined in the RAVEN input file as follows:
-
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=FT model input example., label=lst:FT_InputExample]
   <Models>
     ...
@@ -80,6 +78,9 @@ The FT of Figure~\ref{fig:FT} described in Listing~\ref{lst:FTModel} can be defi
     \caption{Example of FT.}
     \label{fig:FT}
 \end{figure}
+
+The FT of Figure~\ref{fig:FT} described in Listing~\ref{lst:FTModel} can be defined in the RAVEN input file as
+shown in Listing~\ref{lst:FT_InputExample}
 
 All the specifications of the FT model are given in the
 \xmlNode{ExternalModel} block.
