develop custom pipelines

--- a/src/nlp/nlp.ipynb
+++ b/src/nlp/nlp.ipynb
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "e3286b6e-7d3c-43e1-8ced-9b4f9e112d92",
    "metadata": {},
    "outputs": [
@@ -1224,6 +1224,26 @@
     "doc = nlp(\"MyCorp Inc. is a company in the U.S.\")\n",
     "print([(ent.text, ent.label_) for ent in doc.ents])\n",
     "spacy.displacy.render(doc, style='ent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "97a722e9-403c-40c0-a3b0-8aa151b55462",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORG\n",
+      "GPE\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ent in doc.ents:\n",
+    "    print(ent.label_)"
    ]
   },
   {
@@ -1535,17 +1555,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "e1f1025f-a7df-464e-82f5-dbcefe15331d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<coreferee.manager.CorefereeBroker at 0x139e01a00>"
+       "<coreferee.manager.CorefereeBroker at 0x1408bbd60>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,26 +1578,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "2a2c328f-dc12-4510-ae3c-49d42bac3381",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wangc/miniconda3/envs/sr2ml_libs/lib/python3.9/site-packages/torch/autocast_mode.py:141: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
-      "  warnings.warn('User provided device_type of \\'cuda\\', but CUDA is not available. Disabling')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc = nlp(\"Although he was very busy with his work, Peter had had enough of it. He and his wife decided they needed a holiday. They travelled to Spain because they loved the country very much.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "3836d9cd-d8fa-4f92-ae9c-0d428bccf0e9",
    "metadata": {},
    "outputs": [
@@ -1594,6 +1605,106 @@
    ],
    "source": [
     "doc._.coref_chains.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ca36074a-3619-4b91-a3b8-09895a34f973",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "coreferee.data_model.ChainHolder"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "3c21f3f2-1974-4f3e-87f5-64fcf3b09068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "he\n",
+      "his\n",
+      "Peter\n",
+      "He\n",
+      "his\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ccc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [66]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m tk \u001b[38;5;129;01min\u001b[39;00m chain:\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28mprint\u001b[39m(doc[tk[\u001b[38;5;241m0\u001b[39m]])\n\u001b[0;32m----> 7\u001b[0m \u001b[43mccc\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ccc' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "    if token._.coref_chains:\n",
+    "        # print(token._.coref_chains)\n",
+    "        for chain in token._.coref_chains:\n",
+    "            for tk in chain:\n",
+    "                print(doc[tk[0]])\n",
+    "        ccc\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "02b47cf6-d6ac-40d5-9a2e-72815002a8d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "had\n",
+      "to\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ent in doc.ents:\n",
+    "    print(ent.root.head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b6b982fa-4e2c-4739-aa69-f73340c4872f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Although"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc[0]"
    ]
   },
   {
@@ -1698,9 +1809,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b455e96-eada-4611-a18c-a1865b1ed6f6",
+   "metadata": {},
+   "source": [
+    "## Example from https://github.com/blueprints-for-text-analytics-python/blueprints-text/blob/master/ch12/Knowledge_Graph.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e41093a0-823f-4b45-9af6-754d66c1f5ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec object at 0x14a7672c0>)\n",
+      "('tagger', <spacy.pipeline.tagger.Tagger object at 0x14a767360>)\n",
+      "('parser', <spacy.pipeline.dep_parser.DependencyParser object at 0x141fef100>)\n",
+      "('attribute_ruler', <spacy.pipeline.attributeruler.AttributeRuler object at 0x140e48dc0>)\n",
+      "('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer object at 0x14a165f40>)\n",
+      "('ner', <spacy.pipeline.ner.EntityRecognizer object at 0x141ff7160>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from spacy import displacy\n",
+    "from spacy.pipeline import EntityRuler\n",
+    "from spacy.tokens import Span\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "print(*nlp.pipeline, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "90d8d5d3-9fde-447c-b532-ebebf7b36971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.tokens import Span\n",
+    "from spacy.language import Language\n",
+    "\n",
+    "@Language.component(\"normEntities\")\n",
+    "def norm_entities(doc):\n",
+    "    ents = []\n",
+    "    for ent in doc.ents:\n",
+    "        if ent[0].pos_ == \"DET\": # leading article\n",
+    "            ent = Span(doc, ent.start+1, ent.end, label=ent.label)\n",
+    "        if len(ent) > 0:\n",
+    "            if ent[-1].pos_ == \"PART\": # trailing particle like 's\n",
+    "                ent = Span(doc, ent.start, ent.end-1, label=ent.label)\n",
+    "            if len(ent) > 0:\n",
+    "                ents.append(ent)\n",
+    "    doc.ents = tuple(ents)\n",
+    "    return doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b0593ca8-8fa4-4215-b3fe-bcaec822f123",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.norm_entities(doc)>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.add_pipe(\"normEntities\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143bcd33-3a99-4105-9d6c-1045db4fec44",
+   "id": "42ecf3f5-6675-47c1-8461-448ebe39d1d0",
    "metadata": {},
    "outputs": [],
    "source": []
