check custom pipeline component

--- a/src/nlp/nlp.ipynb
+++ b/src/nlp/nlp.ipynb
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "id": "90d8d5d3-9fde-447c-b532-ebebf7b36971",
    "metadata": {},
    "outputs": [],
@@ -1872,8 +1872,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 113,
    "id": "b0593ca8-8fa4-4215-b3fe-bcaec822f123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_lg\")\n",
+    "# nlp.add_pipe(\"normEntities\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "42ecf3f5-6675-47c1-8461-448ebe39d1d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(\"Although he was very busy with his work, Peter had had enough of it. He and his wife decided they needed a holiday. They travelled to Spain because they loved the country very much. Peter's wife is pretty\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "f80af7ac-3425-4301-9098-2f65aece2024",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc1=nlp(doc.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "c042102b-7654-48f5-b51f-0f28b1869f3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Although he was very busy with his work, Peter had had enough of it. He and his wife decided they needed a holiday. They travelled to Spain because they loved the country very much. Peter's wife is pretty"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "1bd7a9c9-e0ae-4d09-ac5e-56021bb29371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PERSON\n",
+      "GPE\n",
+      "PERSON\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ent in doc1.ents:\n",
+    "    print(ent.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "e88c92a5-44cd-4512-a184-228ad33a0cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipes = [pipe for (pipe,_) in nlp.pipeline]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "58ca3147-2d9f-4d09-aaf0-4fbcd6f9fc52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['transformer',\n",
+       " 'tagger',\n",
+       " 'parser',\n",
+       " 'attribute_ruler',\n",
+       " 'lemmatizer',\n",
+       " 'ner',\n",
+       " 'coreferee',\n",
+       " 'normEntities']"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "0207212a-331f-4aa1-9b60-a1859756e860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pipe in pipes:\n",
+    "    _ = nlp.remove_pipe(pipe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "141083a0-7c4e-46f7-a6c7-14f96cf56ca9",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +2004,7 @@
        "<function __main__.norm_entities(doc)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,8 +2015,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "id": "de8b3604-bef9-4b28-8e6a-38f3ed893191",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Argument 'string' has incorrect type (expected str, got spacy.tokens.doc.Doc)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [102]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m doc2 \u001b[38;5;241m=\u001b[39m \u001b[43mnlp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoc1\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/sr2ml_libs/lib/python3.9/site-packages/spacy/language.py:998\u001b[0m, in \u001b[0;36mLanguage.__call__\u001b[0;34m(self, text, disable, component_cfg)\u001b[0m\n\u001b[1;32m    979\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\n\u001b[1;32m    980\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    981\u001b[0m     text: \u001b[38;5;28mstr\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    984\u001b[0m     component_cfg: Optional[Dict[\u001b[38;5;28mstr\u001b[39m, Dict[\u001b[38;5;28mstr\u001b[39m, Any]]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    985\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Doc:\n\u001b[1;32m    986\u001b[0m     \u001b[38;5;124;03m\"\"\"Apply the pipeline to some text. The text can span multiple sentences,\u001b[39;00m\n\u001b[1;32m    987\u001b[0m \u001b[38;5;124;03m    and can contain arbitrary whitespace. Alignment into the original string\u001b[39;00m\n\u001b[1;32m    988\u001b[0m \u001b[38;5;124;03m    is preserved.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    996\u001b[0m \u001b[38;5;124;03m    DOCS: https://spacy.io/api/language#call\u001b[39;00m\n\u001b[1;32m    997\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 998\u001b[0m     doc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake_doc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    999\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m component_cfg \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1000\u001b[0m         component_cfg \u001b[38;5;241m=\u001b[39m {}\n",
+      "File \u001b[0;32m~/miniconda3/envs/sr2ml_libs/lib/python3.9/site-packages/spacy/language.py:1081\u001b[0m, in \u001b[0;36mLanguage.make_doc\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m   1077\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(text) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_length:\n\u001b[1;32m   1078\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1079\u001b[0m         Errors\u001b[38;5;241m.\u001b[39mE088\u001b[38;5;241m.\u001b[39mformat(length\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(text), max_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_length)\n\u001b[1;32m   1080\u001b[0m     )\n\u001b[0;32m-> 1081\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtokenizer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Argument 'string' has incorrect type (expected str, got spacy.tokens.doc.Doc)"
+     ]
+    }
+   ],
+   "source": [
+    "doc2 = nlp(doc1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "49dc06a2-4336-44c4-84d9-1be1d9d0191a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc2 = norm_entities(doc1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "a788ba69-c65d-47d5-bddf-0a1a261e5c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Although he was very busy with his work, Peter had had enough of it. He and his wife decided they needed a holiday. They travelled to Spain because they loved the country very much."
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "42ecf3f5-6675-47c1-8461-448ebe39d1d0",
+   "id": "6e387ce3-a83e-488d-bc2a-c4fd8557ab5c",
    "metadata": {},
    "outputs": [],
    "source": []
