--- a/src/nlp/nlp_custom_pipes.ipynb
+++ b/src/nlp/nlp_custom_pipes.ipynb
@@ -949,8 +949,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "560fd3d9-d77b-4b27-b384-e36e4a96c691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "pattern = [{\"LOWER\": \"hello\"}, {\"IS_PUNCT\": True}, {\"LOWER\": \"world\"}]\n",
+    "matcher.add(\"HelloWorld\", [pattern])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "29ba4cf5-bd97-49a8-8079-ac1c17c85f6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, [[{'LOWER': 'hello'}, {'IS_PUNCT': True}, {'LOWER': 'world'}]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matcher.get('HelloWorld')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf4b333-dd53-4873-917c-8609749b54a1",
    "metadata": {},
    "outputs": [],
    "source": []
